environments/informationtechnology-205813/prometheus/grafana-primary/grafana-narrative-cloud-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start
    nginx.ingress.kubernetes.io/auth-url: http://oauth.default.svc.cluster.local:4180/oauth2/auth
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: grafana
  namespace: it
spec:
  rules:
  - host: grafana.narrative.cloud
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
  tls:
  - secretName: cloudflare-wildcard-narrative-cloud
    hosts:
      - grafana.narrative.cloud
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth-grafana
  namespace: default
spec:
  rules:
  - host: grafana.narrative.cloud
    http:
      paths:
      - backend:
          serviceName: oauth
          servicePort: 4180
        path: /oauth2
  tls:
  - secretName: cloudflare-wildcard-narrative-cloud
    hosts:
      - grafana.narrative.cloud
